--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "@example/starter",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview"
-  },
-  "devDependencies": {
-    "astro": "^0.20.5",
-    "@astrojs/renderer-react": "^0.2.0",
-    "@astrojs/renderer-svelte": "^0.1.1"
-  }
+	"name": "@example/starter",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"prepare": "husky install"
+	},
+	"devDependencies": {
+		"@astrojs/renderer-react": "^0.2.0",
+		"@astrojs/renderer-svelte": "^0.1.1",
+		"astro": "^0.20.5",
+		"husky": "^7.0.2",
+		"lint-staged": "^11.1.2",
+		"prettier": "^2.4.0"
+	},
+	"lint-staged": {
+		"**/*": "prettier --write --ignore-unknown"
+	}
 }
